# simple_lashingrobot_ws

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  SLAM_V11_QUICKSTART.md  restart.sh  restart_algorithm_stack.sh  restart_ros_stack.sh  start.sh  start_.sh  start_algorithm_stack.sh  start_driver_stack.sh  stop_algorithm_stack.sh  topic_tranfer.sh  通信协议.md
src/chassis_ctrl/: CMakeLists.txt  package.xml
src/chassis_ctrl/config/: bind_point_classification.yaml  gripper_tf.yaml  rtabmap_scepter.ini
src/chassis_ctrl/data/: bindData.txt  bind_execution_memory.json  cabin_state.json  lashing_config.json  manual_workspace_quad.json  path_points.json  path_points_-1.json  path_points_1.json  path_points_2.json  path_points_3.json  pseudo_slam_bind_path.json  pseudo_slam_points.json  time_x_200.txt  time_x_300.txt  time_y_200.txt  time_y_300.txt
src/chassis_ctrl/include/: cabin_calibration.h  cabin_move_all.h  cabin_move_single.h  cabin_upload.h  common.hpp  control.h  imuTool.h  linear_module_move_all.h  linear_module_move_single.h  linear_module_single_move.h  linear_module_upload.h  motion.h  path_planning_result.h  simulated_annealing.h  tool.h
src/chassis_ctrl/launch/: api.launch  pointai_tf_verify.launch  rtabmap_scepter.launch  rtabmap_scepter_cloud.launch  rtabmap_scepter_fused.launch  run.launch  suoquAndmoduan.launch  suoqu_slam.launch
src/chassis_ctrl/msg/: AreaProgress.msg  LashingArray.msg  PointCoords.msg  area_choose.msg  linear_module_upload.msg  path_planning_result.msg
src/chassis_ctrl/scripts/: acceptance_plan_publisher.py  bind_point_classification.py  debug_button_node.py  debug_gui_node.py  gripper_tf_broadcaster.py  odom_tf_bridge.py  planar_odom_projector.py  pointAI.py  scepter_rgb_ir_fusion.py  stable_point_tf_broadcaster.py  workspace_picker_web_open.py  workspace_picker_web_server.py
src/chassis_ctrl/src/: client.cpp  moduanNode.cpp  moduanNode_show.cpp  suoquNode.cpp  suoquNode_show.cpp  tiltImuNode.cpp  topics_transfer.cpp
src/chassis_ctrl/srv/: ExecuteBindPoints.srv  Pathguihua.srv  ProcessImage.srv  StartPseudoSlamScan.srv
src/chassis_ctrl/test/: test_bind_point_classification.py  test_gripper_tf_broadcaster.py  test_planar_odom_projector.py  test_pointai_order.py  test_system_log_mux.py  test_workspace_picker_web_launch.py  test_workspace_picker_web_runtime.py
src/fast_image_solve/: CMakeLists.txt  package.xml
src/fast_image_solve/config/: extric_matrix.txt  params.yaml  params_image.yaml  params_orbbec.yaml  pose_matrix.txt
src/fast_image_solve/data/: FullRegioncoordinates copy.txt  FullRegioncoordinates.txt  NineRegioncoordinates copy 2.txt  NineRegioncoordinates copy.txt  NineRegioncoordinates.txt  pts.txt
src/fast_image_solve/launch/: gemini_330_series.launch  run.launch
src/fast_image_solve/msg/: PointCoords.msg  PointWithDepth.msg  PointsArray.msg  PointsWithDepthArray.msg
src/fast_image_solve/scripts/: calibration.py  my_client.py  npy.py  plot.py  plot_.py  vision.py
src/fast_image_solve/src/: 5.18auto.cpp  5.18auto_node.cpp  client.cpp  fast_image.cpp  fast_image_node.cpp  sensors_mid_node.cpp
src/fast_image_solve/srv/: DetectAndSavePose.srv  PlaneDetection.srv  ProcessImage.srv  image.srv
src/tie_robot_bringup/: CMakeLists.txt  package.xml
src/tie_robot_bringup/launch/: algorithm_stack.launch  api.launch  demo_rosbridge_light.launch  driver_camera.launch  driver_moduan.launch  driver_stack.launch  driver_suoqu.launch  frontend.launch  pointai_tf_verify.launch  rosbridge_stack.launch  run.launch  slam_v30_offline_visual_replay.launch  suoquAndmoduan.launch  tf_stack.launch
src/tie_robot_bringup/scripts/: install_backend_service.sh  install_demo_mode_service.sh  install_driver_services.sh  install_frontend_autostart.sh  install_rosbridge_service.sh  install_show_legacy_frontend_service.sh
src/tie_robot_bringup/systemd/: tie-robot-backend-control.sudoers.in  tie-robot-backend.service.in  tie-robot-demo-rosbridge.service.in  tie-robot-demo-show-full.service.in  tie-robot-driver-camera.service.in  tie-robot-driver-control.sudoers.in  tie-robot-driver-moduan.service.in  tie-robot-driver-suoqu.service.in  tie-robot-frontend.service.in  tie-robot-rosbridge.service.in  tie-robot-show-legacy-frontend.service.in
src/tie_robot_bringup/test/: test_agent_memory_contract.py  test_architecture_cleanup.py  test_codex_session_guard.py  test_driver_algorithm_node_boundaries.py  test_giant_business_structuring.py  test_linear_module_protocol_angle_scaling.py  test_motion_wait_strategy.py  test_navigation_stack_split.py  test_ros_interface_names.py  test_systemd_ros_master_ownership.py
src/tie_robot_bringup/tools/: wait_for_ros_master.py
src/tie_robot_control/: CMakeLists.txt  package.xml
src/tie_robot_control/include/: common.hpp  modbus_connect.h  sbus_decoder.h
src/tie_robot_control/src/: moduanNode.cpp  moduan_driver_node.cpp  moduan_motion_controller_node.cpp
src/tie_robot_control/test/: test_single_point_bind_chain.py
src/tie_robot_description/: CMakeLists.txt  package.xml
src/tie_robot_description/URDF/: model.urdf
src/tie_robot_description/rviz/: chassis_visual.rviz  sijuyanjiuyuan.rviz
src/tie_robot_hw/: CMakeLists.txt  package.xml
src/tie_robot_msgs/: CMakeLists.txt  package.xml
src/tie_robot_msgs/action/: ExecuteBindPointsTask.action  Move.action  RunBindPathDirectTestTask.action  StartGlobalWorkTask.action  StartPseudoSlamScanTask.action
src/tie_robot_msgs/msg/: Area_info.msg  LashingCoords.msg  ModuanState.msg  PointsArray.msg  cabin_calibration.msg  cabin_move_all.msg  cabin_move_single.msg  cabin_upload.msg  linear_module_move_all.msg  linear_module_move_single.msg  motion.msg
src/tie_robot_msgs/srv/: ExecuteBindPoints.srv  PlaneDetection.srv  RobotHomeCalibration.srv  SetExecutionMode.srv  SetGripperTfCalibration.srv  SingleMove.srv  StartGlobalWork.srv  StartPseudoSlamScan.srv  linear_module_move.srv
src/tie_robot_perception/: CMakeLists.txt  package.xml  setup.py
src/tie_robot_process/: CMakeLists.txt  package.xml
src/tie_robot_web/: CMakeLists.txt  package.xml
(+810 files in other folders)
