<?xml version="1.0"?>
<package format="2">
  <name>tie_robot_description</name>
  <version>0.0.0</version>
  <description>Tie robot description assets including URDF and RViz configs.</description>

  <maintainer email="you@example.com">your_name</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
</package>
